  user id than the profile.__name__.

- LP #522179: Added template slots and admin UI for generating announcement
  blurbs that will be exposed to all site users. (rafrombrc)

- LP #523280: Rejigger formish views and templates to put page_title value in
  TemplateAPI object instead of passing it directly into the template
  (rafrombrc)


3.18 (2010-02-22)
-----------------

- Fix for memory leak in mailin process.

- UI fixes.  (ree)


3.17 (2010-02-17)
-----------------

- LP #503451: Calendar: Week view does not display some events

- Fixed calendar list view to correctly show "all-day" for all-day events.

- LP #522173: Add a "down for maintenance" HTML page in views/static
  with relative links to styling and images which can be served
  directly by Apache.

- When importing users, using cico, any space characters in the user's id are
  now elided.

- LP #523333: find_contiguous_slot error error in calendar

3.16 (2010-02-12)
-----------------

- Add "evolve5" step which converts calendar layers and categories to
  have opaque object ids.

- Made the (+) on all-day events on the calendar day and week
  views functional.

- Fixed links to all-day events on the calendar day view.

- LP #510242: change submit buttons to say "submit" (as has been the
  case in previous releases) rather than "Edit" or "Add".

- LP #510770: Sort categories by title rather than path.

- LP #510304: Add/edit calendar event should show default category
  first always.

- LP #513340: Calendar event blocks not formatting correctly in IE

- LP #510240: Formish edit screens have wrong heading

- LP #506106: "accept invitation" refused with password length error
  no matter what password length provided.

- LP #510187: Get the display for per-office data in People reports to
  match the previous layout.

- LP #497437: Fixed all-day event option for calendar events.

- LP #503442: Fixed hardcoded year left in calendar week view template.
